--- a/14-20claves.html
+++ b/14-20claves.html
@@ -9,24 +9,23 @@
 		<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
-		<section id="calendariocivico">
+		<section>
 			<div class="row">
 				<div class="col-md-12 titulo-20claves">
 					<div class="">
 						<h1 class="font-Museo text-azul">Días Fundación Telefónica</h1>
 						<h3 class="text-celeste p-m-0">20 claves educativas para el 2020</h3>	
-						<p class="text-gray fs-15 pt-3"><strong>TRUJILLO:</strong>&nbsp;Martes 9 de setiembre de 2014</p>	
+						<p class="fs-15 pt-3"><strong>TRUJILLO:</strong>&nbsp;Martes 9 de setiembre de 2014</p>	
 					</div>
-
 				</div>
 			</div>
-			<div class="contenedor">
+			<div class="contenedor fs-15 text-gray">
 				<div class="row">	
 					<div class="col-md-12">
-						<p class="text-gray text-justify fs-15 pt-3">Se trata de una serie de conversatorios con el educador <a href="">Hugo Díaz</a>, quien analizará las 20 claves educativas para el 2020. Publicación de Fundación Telefónica que es la base de estos diálogos que busca responder algunas interrogantes: ¿Qué cambios deben aplicarse sobre la Educación para adaptarse a las necesidades sociales, económicas y tecnológicas del siglo XXI? ¿Qué papel jugarán los profesores, las familias y los propios estudiantes en este reto?.</p>				
+						<p class="text-justify pt-3">Se trata de una serie de conversatorios con el educador <a href="">Hugo Díaz</a>, quien analizará las 20 claves educativas para el 2020. Publicación de Fundación Telefónica que es la base de estos diálogos que busca responder algunas interrogantes: ¿Qué cambios deben aplicarse sobre la Educación para adaptarse a las necesidades sociales, económicas y tecnológicas del siglo XXI? ¿Qué papel jugarán los profesores, las familias y los propios estudiantes en este reto?.</p>				
 					</div>
 				</div>
-				<div class="row pt-3">
+				<div class="row pt-3 fs-15">
 					<div class="col-md-8 border-right pr-2">
 						<div class="row">
 							<div class="col-md-4 pr-2">
@@ -37,35 +36,35 @@
 							</div>
 							<div class="col-md-8 text-justify pl-2">
 								<h4 class="font-Museo text-azul pb-3">Descripción</h4>
-								<p class="text-gray fs-15 pb-1">El conversatorio busca reflexionar a partir de la publicación “<a href="">20 claves educativas para el 2020</a>”, documento que surge a partir de las conclusiones del Encuentro Internacional de Educación 2012-2013, con la participación de los expertos Hugo Díaz, asesor principal de la Fundación Telefónica y presidente del Consejo Nacional de Educación y César Picón, consultor en educación y experto en gestión educativa.</p>	
-								<p class="text-gray fs-15 pb-1">Puedes <a href="">visualizar</a> el documento de las “<a href="">20 claves educativas para el 2020</a>” en nuestra sección de <a href="">Publicaciones</a>.</p>
+								<p>El conversatorio busca reflexionar a partir de la publicación “<a href="">20 claves educativas para el 2020</a>”, documento que surge a partir de las conclusiones del Encuentro Internacional de Educación 2012-2013, con la participación de los expertos Hugo Díaz, asesor principal de la Fundación Telefónica y presidente del Consejo Nacional de Educación y César Picón, consultor en educación y experto en gestión educativa.</p>	
+								<p>Puedes <a href="">visualizar</a> el documento de las “<a href="">20 claves educativas para el 2020</a>” en nuestra sección de <a href="">Publicaciones</a>.</p>
 							</div>		
 						</div>	
 						<div class="separador m-4-0"></div>
 						<h4 class="font-Museo text-azul pb-3">Video</h4>
-						<p class="text-gray fs-15 pb-1">Encuentro Internacional de Educación: educación formal, informal y no formal</p>
-						<iframe width="100%" height="300" src="https://www.youtube.com/embed/A8TCqKYGBPg" frameborder="0" allowfullscreen></iframe>							
+						<p class="pb-1">Encuentro Internacional de Educación: educación formal, informal y no formal</p>
+						<iframe width="100%" height="300" src="https://www.youtube.com/embed/A8TCqKYGBPg" frameborder="0" allowfullscreen></iframe>		
 					</div>		
 					<div class="col-md-4 pl-2">
 						<h4 class="font-Museo text-azul pb-3">Ciudad</h4>
 						<div class="col-md-12 bg-1 recursos mb-3 p-3">
 							<h5 class="font-Museo text-azul pb-3">TRUJILLO</h5>
-							<p class="text-gray fs-15"><strong>Fecha:</strong>&nbsp;Martes 9 de setiembre de 2014</p>
-							<p class="text-gray fs-15"><strong>Lugar:</strong>&nbsp;Universidad Privada Antenor Orrego – Auditorio Pabellón H</p>	
-							<p class="text-gray fs-15"><strong>Dirección:</strong>&nbsp;Avenida América Sur 3145, Trujillo</p>	
-							<p class="text-gray fs-15"><strong>Horario:</strong>&nbsp;de 5:00 p.m. a 7:00 p.m.</p>		
+							<p><strong>Fecha:</strong>&nbsp;Martes 9 de setiembre de 2014</p>
+							<p><strong>Lugar:</strong>&nbsp;Universidad Privada Antenor Orrego – Auditorio Pabellón H</p>	
+							<p><strong>Dirección:</strong>&nbsp;Avenida América Sur 3145, Trujillo</p>	
+							<p><strong>Horario:</strong>&nbsp;de 5:00 p.m. a 7:00 p.m.</p>		
 						</div>
 						<div class="col-md-12 pt-3 pb-3">
-							<p class="text-azulOscuro fs-15 text-center"><em>Se cerraron inscripciones</em></p>
+							<p class="text-azulOscuro text-center"><em>Se cerraron inscripciones</em></p>
 						</div>
 						<div class="col-md-12 p-3">
 							<h4 class="font-Museo text-azul">Artículos Relacionados</h4>
 						</div>
 						<div class="col-md-12 bg-1 recursos text-justify p-3">
-							<p class="text-gray fs-15"><a href="">Jóvenes, nivel educativo y empleo</a></p>
-							<p class="text-gray fs-13 pb-3">En este artículo Hugo Díaz analiza el último informe de la Organización para la Cooperación y el Desarrollo Económicos (OCDE) sobre los niveles educativos y las calificaciones de la población, en especial de los jóvenes, para hacer frente al cambio de las estructuras del mercado de empleo. Una característica importante en épocas de crisis, como las que viven varios de los países miembros de esa organización, es el deseo de los jóvenes de calificarse antes de ingresar al mundo laboral.</p>	
-							<p class="text-gray fs-15"><a href="">Preparar para el futuro: habilidades que los profesores deben trasmitir a sus alumnos</a></p>
-							<p class="text-gray fs-13">¿Qué habilidades deben inculcar los profesores a los jóvenes alumnos de miras al siglo XXI? Son cuatro habilidades en particular que en este siguiente artículo nos da una mirada de los retos que plantea el futuro a los más jóvenes.</p>
+							<p><a href="">Jóvenes, nivel educativo y empleo</a></p>
+							<p class="fs-13 pb-3">En este artículo Hugo Díaz analiza el último informe de la Organización para la Cooperación y el Desarrollo Económicos (OCDE) sobre los niveles educativos y las calificaciones de la población, en especial de los jóvenes, para hacer frente al cambio de las estructuras del mercado de empleo. Una característica importante en épocas de crisis, como las que viven varios de los países miembros de esa organización, es el deseo de los jóvenes de calificarse antes de ingresar al mundo laboral.</p>	
+							<p><a href="">Preparar para el futuro: habilidades que los profesores deben trasmitir a sus alumnos</a></p>
+							<p class="fs-13">¿Qué habilidades deben inculcar los profesores a los jóvenes alumnos de miras al siglo XXI? Son cuatro habilidades en particular que en este siguiente artículo nos da una mirada de los retos que plantea el futuro a los más jóvenes.</p>
 						</div>		
 					</div>
 				</div>				
