--- a/15blog-home.html
+++ b/15blog-home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 <html>
 	<head>
-		<title>Blog-interno</title>
+		<title>Blog-home</title>
 		<meta charset="utf-8">
 		<!-- Responsiveness -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
@@ -41,88 +41,138 @@
 			  </div><!-- /.container-fluid -->
 			</nav>
 		</header>
-		<section id="calendariocivico">
-			<div class="contenedor pt-1">
+		<section>
+			<div class="row">
+				<div class="col-md-12 p-m-0">
+					<div class="relative">
+						<img src="assets/images/politica3.png" class="height-300">
+						<div class="titulo-blog">
+							<h5 class="font-Museo pb-1"><strong>DS Nº 004-2013-MINEDU</strong></h5>
+							<p class="fs-15">Disposición complementaria transitoria al Reglamento de LRM.</p>
+						</div>				
+					</div>	
+				</div>				
+			</div>
+			<div class="contenedor text-gray fs-15">
 				<div class="row pt-3">
 					<div class="col-md-9 border-right pr-2">
-						<h4 class="font-Museo text-azul pb-3">POLÍTICAS</h4>
-						<p class="text-gray fs-15 pb-1"><a href=""><span class="glyphicon glyphicon-arrow-left"</span>&nbsp;Entradas más antiguas</a></p>	
-						<div class="separador m-2-0"></div>
-						<div class="col-md-12">
-							<img src="assets/images/politica2.png">
-							<div class="titulo-blog-interno">
-								<h5 class="font-Museo">DS N°004-2013-MINEDU Disposición complementaria transitoria al Reglamento de LRM</h5>
-								<p class="fs-13">Por: <a href=""><strong>Hugo Díaz</strong></a>&nbsp;| 29 mayo, 2015</p>
-							</div>
-							<p class="text-gray fs-15 pt-3 text-justify">Importante norma relacionada con los procesos de reasignación suspendidos hacen un buen tiempo por los diversos concursos de contrato de profesores. Como se sabe, la reasignación fue suspendida dejándose solo por motivos de salud. Como dice el artículo 1 .</p>
-							<p class="text-azul fs-15 text-right"><a href="">Leer más</a></p>
-							<p class="text-gray fs-15 pb-1"><a href="">Comentarios (6)</a></p>	
-							<div class="separador m-2-0"></div>
-						</div>
-						<div class="col-md-12">
-							<img src="assets/images/politica2.png">
-							<div class="titulo-blog-interno">
-								<h5 class="font-Museo">DS N°004-2013-MINEDU Disposición complementaria transitoria al Reglamento de LRM</h5>
-								<p class="fs-13">Por: <a href=""><strong>Hugo Díaz</strong></a>&nbsp;| 29 mayo, 2015</p>
-							</div>
-							<p class="text-gray fs-15 pt-3 text-justify">Importante norma relacionada con los procesos de reasignación suspendidos hacen un buen tiempo por los diversos concursos de contrato de profesores. Como se sabe, la reasignación fue suspendida dejándose solo por motivos de salud. Como dice el artículo 1 .</p>
-							<p class="text-azul fs-15 text-right"><a href="">Leer más</a></p>
-							<p class="text-gray fs-15 pb-1"><a href="">Comentarios (6)</a></p>	
-							<div class="separador m-2-0"></div>
-						</div>
-						<div class="col-md-12">
-							<img src="assets/images/politica2.png">
-							<div class="titulo-blog-interno">
-								<h5 class="font-Museo">DS N°004-2013-MINEDU Disposición complementaria transitoria al Reglamento de LRM</h5>
-								<p class="fs-13">Por: <a href=""><strong>Hugo Díaz</strong></a>&nbsp;| 29 mayo, 2015</p>
-							</div>
-							<p class="text-gray fs-15 pt-3 text-justify">Importante norma relacionada con los procesos de reasignación suspendidos hacen un buen tiempo por los diversos concursos de contrato de profesores. Como se sabe, la reasignación fue suspendida dejándose solo por motivos de salud. Como dice el artículo 1 .</p>
-							<p class="text-azul fs-15 text-right"><a href="">Leer más</a></p>
-							<p class="text-gray fs-15 pb-1"><a href="">Comentarios (6)</a></p>
-							<div class="separador m-4-0"></div>	
-						</div>
-						<p class="text-gray fs-15"><a href=""><span class="glyphicon glyphicon-arrow-left"</span>&nbsp;Entradas más antiguas</a></p>	
-					</div>
-					<div class="col-md-3 pl-2">
-						<div class="col-md-12 pt-3">
-							<div class="relative mb-3">
-								<img src="assets/images/jurado1.png">
-								<div class="titulo-destacado text-center">
-									<h5 class="font-Museo p-m-0"><strong>HUGO DÍAZ</strong></h5>
-									<p class="fs-13">Autor del blog</p>
+						<div class="row">
+							<div class="col-md-12 text-justify">
+								<h4 class="font-Museo text-azul pb-3">TEMAS RECIENTES</h4>
+								<div class="row">
+									<div class="col-md-3 pt-3">
+										<img src="assets/images/politica1.png">
+									</div>
+									<div class="col-md-9">
+										<h4 class="text-celeste">Perfil de un docente digital</h4>
+										<p>En el artículo anterior comentamos sobre la competencia digital y destacábamos que los objetivos fundamentales que los sistemas educativos deben alcanzar en esta nueva área formativa con sus estudiantes se relacionaban con:  formar ciudadanos para actuar en una sociedad digital. </p>
+										<p class="text-right"><a href="">Leer más</a></p>	
+									</div>
 								</div>
+								<div class="separador m-2-0"></div>	
+								<div class="row">
+									<div class="col-md-3 pt-3">
+										<img src="assets/images/politica1.png">
+									</div>
+									<div class="col-md-9">
+										<h4 class="text-celeste">Perfil de un docente digital</h4>
+										<p>En el artículo anterior comentamos sobre la competencia digital y destacábamos que los objetivos fundamentales que los sistemas educativos deben alcanzar en esta nueva área formativa con sus estudiantes se relacionaban con:  formar ciudadanos para actuar en una sociedad digital. </p>
+										<p class="text-right"><a href="">Leer más</a></p>	
+									</div>
+								</div>
+								<div class="separador m-2-0"></div>
+								<div class="row">
+									<div class="col-md-3 pt-3">
+										<img src="assets/images/politica1.png">
+									</div>
+									<div class="col-md-9">
+										<h4 class="text-celeste">Perfil de un docente digital</h4>
+										<p>En el artículo anterior comentamos sobre la competencia digital y destacábamos que los objetivos fundamentales que los sistemas educativos deben alcanzar en esta nueva área formativa con sus estudiantes se relacionaban con:  formar ciudadanos para actuar en una sociedad digital. </p>
+										<p class="text-right"><a href="">Leer más</a></p>	
+									</div>
+								</div>								
+								<div class="col-md-12 pt-3 recursos mb-3">
+									<h4 class="font-Museo text-azul pb-3 pl-2">DESTACADOS</h4>
+									<div class="col-md-5">
+										<div class="relative">
+											<img src="assets/images/politica1.png">
+											<h6 class="font-Museo titulo-destacado"><strong>Roberto Lerner</strong></h6>
+										</div>										
+									</div>
+									<div class="col-md-7">
+										<h4 class="text-celeste">Perfil de un docente digital</h4>
+										<p>En el artículo anterior comentamos sobre la competencia digital y destacábamos que los objetivos fundamentales que los sistemas educativos deben alcanzar en esta nueva área formativa con sus estudiantes se relacionaban con:  formar ciudadanos para actuar en una sociedad digital. </p>
+										<p class="text-right"><a href="">Leer más</a></p>											
+									</div>
+								</div>	
+								<div class="col-md-12 pt-3 recursos">
+									<h4 class="font-Museo text-azul pb-3 pl-2">ARTÍCULOS</h4>
+									<div class="col-md-5">
+										<div class="relative">
+											<img src="assets/images/politica1.png">
+											<h6 class="font-Museo titulo-destacado"><strong>Roberto Lerner</strong></h6>
+										</div>										
+									</div>
+									<div class="col-md-7">
+										<h4 class="text-celeste">Perfil de un docente digital</h4>
+										<p>En el artículo anterior comentamos sobre la competencia digital y destacábamos que los objetivos fundamentales que los sistemas educativos deben alcanzar en esta nueva área formativa con sus estudiantes se relacionaban con:  formar ciudadanos para actuar en una sociedad digital. </p>
+										<p class="text-right"><a href="">Leer más</a></p>											
+									</div>
+								</div>							
+								</div>								
 							</div>
-							<p class="text-gray fs-13 pt-3 text-justify">Soy planificador de la educación, especialista en el estudio y evaluación de políticas educativas. El Blog que les presento, sobre Desafíos de Educación Siglo XXI, tiene por finalidad analizar el estado actual de la educación en el Perú; en especial, la situación de la educación básica, la formación y el desarrollo profesional de los docentes. En ese contexto, se destacan los avances, las dificultades, las experiencias relevantes, los esfuerzos encaminados a consensuar estrategias, las posiciones encontradas."</p>
 						</div>
-						<div class="col-md-12 bg-2 recursos m-4-0 p-3 text-gray fs-13">
-							<p class="font-Museo text-azul pb-3 fs-15 pt-3">ENTRADAS RECIENTES</p>
-							<ul type = disk class="pl-10">
-								<li class="pb-3">DS N°004-2013-MINEDU Disposición complementaria transitoria al Reglamento de LRM</li>
-								<li class="pb-3">Competencia digital y currículo</li>
-								<li class="pb-3">Informe de Educación: preparando inicio de clases</li>
-								<li class="pb-3">Resolución Viceministerial Nº 003-2015-Minedu</li>
-								<li class="pb-3">Docentes interinos</li>
-							</ul>		
-						</div>	
-						<div class="col-md-12 bg-1 recursos m-4-0 p-3 text-gray fs-13">
-							<p class="font-Museo text-azul pb-3 fs-15 pt-3">COMENTARIOS RECIENTES</p>
-							<ul type = disk class="pl-10">
-								<li class="pb-3">DS N°004-2013-MINEDU Disposición complementaria transitoria al Reglamento de LRM</li>
-								<li class="pb-3">Competencia digital y currículo</li>
-								<li class="pb-3">Informe de Educación: preparando inicio de clases</li>
-								<li class="pb-3">Resolución Viceministerial Nº 003-2015-Minedu</li>
-								<li class="pb-3">Docentes interinos</li>
-							</ul>		
-						</div>	
-						<div class="col-md-12 bg-2 recursos m-4-0 p-3 text-gray fs-13">
-							<p class="font-Museo text-azul pb-3 fs-15 pt-3">ARCHIVOS</p>
-							<ul type = disk class="pl-10">
-								<li class="pb-3">DS N°004-2013-MINEDU Disposición complementaria transitoria al Reglamento de LRM</li>
-								<li class="pb-3">Competencia digital y currículo</li>
-								<li class="pb-3">Informe de Educación: preparando inicio de clases</li>
-								<li class="pb-3">Resolución Viceministerial Nº 003-2015-Minedu</li>
-								<li class="pb-3">Docentes interinos</li>
-							</ul>		
+						<div class="col-md-3 pl-2">
+							<div class="col-md-12 pt-3">
+								<div class="relative mb-3">
+									<img src="assets/images/jurado1.png">
+									<div class="titulo-destacado text-center">
+										<h5 class="font-Museo p-m-0"><strong>HUGO DÍAZ</strong></h5>
+										<p class="fs-13">Autor del blog</p>
+									</div>
+								</div>
+								<p class=" fs-13 pt-3 text-justify">Soy planificador de la educación, especialista en el estudio y evaluación de políticas educativas. El Blog que les presento, sobre Desafíos de Educación Siglo XXI, tiene por finalidad analizar el estado actual de la educación en el Perú; en especial, la situación de la educación básica, la formación y el desarrollo profesional de los docentes. En ese contexto, se destacan los avances, las dificultades, las experiencias relevantes, los esfuerzos encaminados a consensuar estrategias, las posiciones encontradas."</p>
+							</div>
+							<div class="col-md-12 bg-2 recursos mb-3 p-3 fs-13">
+								<p class="font-Museo text-azul pb-3 pt-3">MATERIALES</p>
+								<ul type = disk class="pl-10">
+									<li class="pb-3">DS N°004-2013-MINEDU Disposición complementaria transitoria al Reglamento de LRM</li>
+									<li class="pb-3">Competencia digital y currículo</li>
+									<li class="pb-3">Informe de Educación: preparando inicio de clases</li>
+									<li class="pb-3">Resolución Viceministerial Nº 003-2015-Minedu</li>
+									<li class="pb-3">Docentes interinos</li>
+								</ul>		
+							</div>	
+							<div class="col-md-12 bg-1 recursos mb-3 p-3 fs-13">
+								<p class="font-Museo text-azul pb-3 pt-3">LO MÁS LEÍDO</p>
+								<ul type = disk class="pl-10">
+									<li class="pb-3">DS N°004-2013-MINEDU Disposición complementaria transitoria al Reglamento de LRM</li>
+									<li class="pb-3">Competencia digital y currículo</li>
+									<li class="pb-3">Informe de Educación: preparando inicio de clases</li>
+									<li class="pb-3">Resolución Viceministerial Nº 003-2015-Minedu</li>
+									<li class="pb-3">Docentes interinos</li>
+								</ul>		
+							</div>	
+							<div class="col-md-12 bg-1 recursos mb-3 p-3 fs-13">
+								<p class="font-Museo text-azul pb-3 pt-3">LO MÁS COMENTADO</p>
+								<ul type = disk class="pl-10">
+									<li class="pb-3">DS N°004-2013-MINEDU Disposición complementaria transitoria al Reglamento de LRM</li>
+									<li class="pb-3">Competencia digital y currículo</li>
+									<li class="pb-3">Informe de Educación: preparando inicio de clases</li>
+									<li class="pb-3">Resolución Viceministerial Nº 003-2015-Minedu</li>
+									<li class="pb-3">Docentes interinos</li>
+								</ul>		
+							</div>	
+							<div class="col-md-12 bg-1 recursos mb-3 p-3 fs-13">
+								<p class="font-Museo text-azul pb-3 pt-3">ENLACES DE INTERÉS</p>
+								<ul type = disk class="pl-10">
+									<li class="pb-3">DS N°004-2013-MINEDU Disposición complementaria transitoria al Reglamento de LRM</li>
+									<li class="pb-3">Competencia digital y currículo</li>
+									<li class="pb-3">Informe de Educación: preparando inicio de clases</li>
+									<li class="pb-3">Resolución Viceministerial Nº 003-2015-Minedu</li>
+									<li class="pb-3">Docentes interinos</li>
+								</ul>		
+							</div>							
 						</div>
 					</div>
 				</div>				
