--- a/7publicaciones.html
+++ b/7publicaciones.html
@@ -9,14 +9,14 @@
 		<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
-		<section id="calendariocivico">
+		<section>
 			<div class="contenedor">
-				<div class="row">		
+				<div class="row text-gray fs-15">		
 					<h1 class="font-Museo text-azul pb-3">Publicaciones</h1>
-					<div class="col-md-12 pl-2 pb-3 text-justify">
+					<div class="col-md-12 pb-3 text-justify">
 						<div class="bg-1 recursos mb-3">
-							<p class="text-gray fs-15">Te damos la bienvenida al espacio de Publicaciones de Educared de Fundación Telefónica. Aquí podrás encontrar un listado de publicaciones realizadas por Fundación Telefónica a lo largo del mundo, asociadas a los siguientes temas: Cultura digital, Innovación Educativa, Sociedad de la Información y Arte. Todas las publicaciones son de descarga gratuita y están al servicio de la comunidad educativa nacional.</p>		
-							<p class="text-gray fs-15 pb-1">Cada semana te recomendaremos una serie de publicaciones sugeridas por nuestro comité de expertos y el equipo Educared para que te mantengas siempre actualizado.</p>
+							<p class="">Te damos la bienvenida al espacio de Publicaciones de Educared de Fundación Telefónica. Aquí podrás encontrar un listado de publicaciones realizadas por Fundación Telefónica a lo largo del mundo, asociadas a los siguientes temas: Cultura digital, Innovación Educativa, Sociedad de la Información y Arte. Todas las publicaciones son de descarga gratuita y están al servicio de la comunidad educativa nacional.</p>		
+							<p>Cada semana te recomendaremos una serie de publicaciones sugeridas por nuestro comité de expertos y el equipo Educared para que te mantengas siempre actualizado.</p>
 						</div>		
 					</div>
 					<div class="col-md-12">
@@ -26,8 +26,8 @@
 						<div class="col-md-7 pl-2 pb-3 text-justify">
 							<h3 class="text-azul">Los MOOC en la educación del futuro: la digitalización de la formación</h3>
 							<h5 class="text-celeste pb-3">Enero 2015 / Fundación Telefónica</h5>
-							<p class="text-gray fs-15">Este libro aborda los retos que deben abordar los MOOC (Massive Open Online Courses), en cuya esencia está proporcionar educación gratuita al mayor número de estudiantes y ofreciendo la mejor calidad posible, para lo que deben ofrecer una formación personalizada, mejorar el contacto entre profesores y alumnos, buscar formas de evaluación adecuadas, medir la asistencia, avalar el grado de cumplimiento mediante certificados…</p>		
-							<p class="text-gray fs-15 pb-1">Asimismo, se quiere dejar claro que no se trata de un movimiento meramente tecnológico, sino que es el principio de una tendencia que puede transformar los modelos que han permanecido estables durante el último siglo, permitiendo la entrada de nuevas prácticas pedagógicas.</p>
+							<p>Este libro aborda los retos que deben abordar los MOOC (Massive Open Online Courses), en cuya esencia está proporcionar educación gratuita al mayor número de estudiantes y ofreciendo la mejor calidad posible, para lo que deben ofrecer una formación personalizada, mejorar el contacto entre profesores y alumnos, buscar formas de evaluación adecuadas, medir la asistencia, avalar el grado de cumplimiento mediante certificados…</p>		
+							<p>Asimismo, se quiere dejar claro que no se trata de un movimiento meramente tecnológico, sino que es el principio de una tendencia que puede transformar los modelos que han permanecido estables durante el último siglo, permitiendo la entrada de nuevas prácticas pedagógicas.</p>
 						</div>
 					</div>
 				</div>
