--- a/8conoceconcurso.html
+++ b/8conoceconcurso.html
@@ -9,21 +9,21 @@
 		<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
-		<section id="calendariocivico">
+		<section>
 			<div class="contenedor">
 				<div class="row">		
 					<h1 class="font-Museo text-azul pb-3">Conoce el concurso y el cronograma de actividades</h1>
 					<div class="col-md-6 pr-2">
 						<img src="assets/images/conoceconcurso.png">
 					</div>
-					<div class="col-md-6 pl-2 text-justify">
+					<div class="col-md-6 pl-2 text-justify text-gray fs-15">
 						<div class="bg-1 recursos mb-3">
-							<p class="text-gray fs-15">Fundación Telefónica Perú le da la bienvenida a una edición más del Concurso de Innovación Educativa, con el que se busca incentivar y apoyar la integración de las Tecnologías de la Información y la Comunicación (TIC) en los procesos de enseñanza.</p>		
+							<p>Fundación Telefónica Perú le da la bienvenida a una edición más del Concurso de Innovación Educativa, con el que se busca incentivar y apoyar la integración de las Tecnologías de la Información y la Comunicación (TIC) en los procesos de enseñanza.</p>
 						</div>
-							<p class="text-gray fs-15 pb-1">En esta nueva edición del concurso pueden participar docentes de todo el país que pertenezcan a centros educativos donde se imparta formación regular a alumnos que cursen del <strong>primer al quinto grado de educación secundaria.</strong></p>
-							<p class="text-gray fs-15 pb-1">Se puede participar en presentando trabajos que supongan la utilización y la aplicación de cualquier TIC en el contexto educativo: presentaciones, blogs, webs, wikis, redes sociales…, siempre y cuando estos trabajos se hayan desarrollado entre 2013 y el primer semestre de 2014.</p>
-							<p class="text-gray fs-15 pb-1">Los trabajos presentados tienen que ser públicos, debiendo facilitar una URL de acceso a los mismos; y pueden elaborarse en idiomas español o idiomas oficiales del estado peruano.</p>
-							<p class="text-gray fs-15 pb-1">Los proyectos ganadores recibirán una serie de premios, tanto para los profesores, como para su aula, con la intención de colaborar en la mejor dotación tecnológica de los centros educativos.</p>	
+						<p>En esta nueva edición del concurso pueden participar docentes de todo el país que pertenezcan a centros educativos donde se imparta formación regular a alumnos que cursen del <strong>primer al quinto grado de educación secundaria.</strong></p>
+						<p>Se puede participar en presentando trabajos que supongan la utilización y la aplicación de cualquier TIC en el contexto educativo: presentaciones, blogs, webs, wikis, redes sociales…, siempre y cuando estos trabajos se hayan desarrollado entre 2013 y el primer semestre de 2014.</p>
+						<p>Los trabajos presentados tienen que ser públicos, debiendo facilitar una URL de acceso a los mismos; y pueden elaborarse en idiomas español o idiomas oficiales del estado peruano.</p>
+						<p>Los proyectos ganadores recibirán una serie de premios, tanto para los profesores, como para su aula, con la intención de colaborar en la mejor dotación tecnológica de los centros educativos.</p>	
 					</div>
 				</div>				
 			</div>
