--- a/9qesmemoriapedag.html
+++ b/9qesmemoriapedag.html
@@ -9,30 +9,30 @@
 		<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
-		<section id="calendariocivico">
+		<section>
 			<div class="contenedor">
 				<div class="row">		
 					<h1 class="font-Museo text-azul pb-3">¿Qué es la memoria Pedagógica?</h1>
 					<div class="col-md-5 pr-2">
 						<img src="assets/images/qesmemoriapedag.png">
 					</div>
-					<div class="col-md-7 pl-2 pb-3 text-justify">
+					<div class="col-md-7 pl-2 pb-3 text-justify text-gray fs-15">
 						<div class="bg-1 recursos mb-3">
-							<p class="text-gray fs-15">El propósito de la Memoria Pedagógica es contar con una versión estándar, creada por los mismos innovadores pedagógicos, del propósito, proceso y logros que la innovación basada en TIC ha buscado. Permite entender de manera más amplia el producto mismo, que está disponible en la web o en otro formato, y sobre todo captar la intención pedagógica que hay detrás de la innovación o proyecto. Gracias a la Memoria Pedagógica podemos entender la tecnología como parte del proceso educativo.</p>		
+							<p>El propósito de la Memoria Pedagógica es contar con una versión estándar, creada por los mismos innovadores pedagógicos, del propósito, proceso y logros que la innovación basada en TIC ha buscado. Permite entender de manera más amplia el producto mismo, que está disponible en la web o en otro formato, y sobre todo captar la intención pedagógica que hay detrás de la innovación o proyecto. Gracias a la Memoria Pedagógica podemos entender la tecnología como parte del proceso educativo.</p>		
 						</div>
-							<p class="text-gray fs-15 pb-1">La Memoria Pedagógica es un documento en el que se describe la razón de ser del proyecto / producto de innovación pedagógica, se presenta el contexto en el que se ha realizado, los procesos al interior del centro educativo que ha implicado su realización, y los logros alcanzados. Al contextualizar la innovación, permite entenderla de mejor manera y sobre todo, hacer comparaciones con los demás proyectos, facilitando la evaluación.</p>
-							<p class="text-gray fs-15 pb-1">La Memoria Pedagógica tendrá una puntuación del 50% sobre la valoración final. En ella se debe justificar que la actividad producida y planificada se ha llevado a cabo en el aula y se ha evaluado tanto desde el punto de vista del proceso como del de la adquisición de los aprendizajes por parte de los alumnos.</p>
+						<p class="pb-1">La Memoria Pedagógica es un documento en el que se describe la razón de ser del proyecto / producto de innovación pedagógica, se presenta el contexto en el que se ha realizado, los procesos al interior del centro educativo que ha implicado su realización, y los logros alcanzados. Al contextualizar la innovación, permite entenderla de mejor manera y sobre todo, hacer comparaciones con los demás proyectos, facilitando la evaluación.</p>
+						<p>La Memoria Pedagógica tendrá una puntuación del 50% sobre la valoración final. En ella se debe justificar que la actividad producida y planificada se ha llevado a cabo en el aula y se ha evaluado tanto desde el punto de vista del proceso como del de la adquisición de los aprendizajes por parte de los alumnos.</p>
 					</div>
 				</div>	
-				<div class="row bg-2 pt-3 pl-2 pb-1">
-					<div class="col-md-1">
+				<div class="row recursos pt-3">
+					<div class="col-md-1 pl-2 pt-1">
 						<img src="assets/icons/importante.png">						
 					</div>
-					<div class="col-md-11 text-justify">
-						<p class="text-gray fs-15"><em><strong>Todo trabajo que no cuente con su Memoria Pedagógica se considerará que no cumple las bases del PREMIO.</strong></em></p>	
-						<p class="text-gray fs-15">Así que ya sabes, una vez que te has inscrito en el Concurso se generará una clave y contraseña que deberás ingresar en la sección: Llena tu Memoria Pedagógica para poder cumplementarla. Tienes plazo hasta el 19 de octubre.</p>
-						<p class="text-gray fs-15">Conozca los premios que recibirán los ganadores peruanos de la edición 2012.</p>
-						<p class="text-gray fs-15">Si desea conocer más en detalle el Premio, le recomendamos que consulte las bases del Premio y las preguntas frecuentes.</p>						
+					<div class="col-md-11 pt-1 text-justify text-gray fs-15">
+						<p><em><strong>Todo trabajo que no cuente con su Memoria Pedagógica se considerará que no cumple las bases del PREMIO.</strong></em></p>	
+						<p>Así que ya sabes, una vez que te has inscrito en el Concurso se generará una clave y contraseña que deberás ingresar en la sección: Llena tu Memoria Pedagógica para poder cumplementarla. Tienes plazo hasta el 19 de octubre.</p>
+						<p>Conozca los premios que recibirán los ganadores peruanos de la edición 2012.</p>
+						<p>Si desea conocer más en detalle el Premio, le recomendamos que consulte las bases del Premio y las preguntas frecuentes.</p>	
 					</div>
 				</div>			
 			</div>
