--- a/10jurado.html
+++ b/10jurado.html
@@ -9,30 +9,30 @@
 		<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
-		<section id="websrecomendadas">
+		<section>
 			<div class="contenedor">
 				<div class="row">
 					<h1 class="text-gray pl-1">Jurado evaluador</h1><br>
 					<div class="row">
 						<div class="col-md-3 relative">
 							<img src="assets/images/jurado1.png" class="height-230">
-							<h5 class="font-Museo nombre-jurado"><strong>Eduardo Villanueva Mansilla</strong></h5>
-							<p class="parrafo-jurado">Asesor de la Fundación Telefónica. Docente de la facultad de Comunicaciones de la PUCP</p>								
+							<h6 class="font-Museo nombre-jurado"><strong>Eduardo Villanueva Mansilla</strong></h6>
+							<p class="parrafo-jurado">Asesor de la Fundación Telefónica. Docente de la facultad de Comunicaciones de la PUCP</p>		
 						</div>
 						<div class="col-md-3 relative">
 							<img src="assets/images/jurado2.png" class="height-230">
-							<h5 class="font-Museo nombre-jurado"><strong>Flor Blanco Hauchecorne</strong></h5>
+							<h6 class="font-Museo nombre-jurado"><strong>Flor Blanco Hauchecorne</strong></h6>
 							<p class="parrafo-jurado">Directora de Innovación Docente del Ministerio de Educación</p>							
 						</div>
 						<div class="col-md-3 relative">
 							<img src="assets/images/jurado3.png" class="height-230">
-							<h5 class="font-Museo nombre-jurado"><strong>Carol Rivero Panaqué</strong></h5>
+							<h6 class="font-Museo nombre-jurado"><strong>Carol Rivero Panaqué</strong></h6>
 							<p class="parrafo-jurado">Docente de la facultad de Educación de la PUCP</p>
 						</div>	
 						<div class="col-md-3 relative">
 							<img src="assets/images/jurado4.png" class="height-230">
-							<h5 class="font-Museo nombre-jurado"><strong>Juan Cadillo León</strong></h5>
-							<p class="parrafo-jurado">Docente referente del Concurso de Innovación de la Fundación Telefónica</p>								
+							<h6 class="font-Museo nombre-jurado"><strong>Juan Cadillo León</strong></h6>
+							<p class="parrafo-jurado">Docente referente del Concurso de Innovación de la Fundación Telefónica</p>						
 						</div>												
 					</div>														
 				</div>				
