--- a/11premios.html
+++ b/11premios.html
@@ -9,16 +9,16 @@
 		<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
-		<section id="calendariocivico">
+		<section>
 			<div class="contenedor">
 				<div class="row">		
-					<h1 class="font-Museo text-azul pb-3">Premios</h1>
-					<div class="col-md-12 pb-3 text-justify">
-						<div class="bg-1 recursos mb-3">
-							<p class="text-gray fs-15">Los docentes y escuelas que resulten ganadores en esta edición del Concurso Fundación Telefónica de Innovación Educativa, recibirán los regalos que se encuentran en la imagen adjunta (imágenes referenciales).</p>		
+					<h1 class="font-Museo text-azul">Premios</h1>
+					<div class="col-md-12 pb-3 text-justify text-gray fs-15">
+						<div class="recursos mb-3">
+							<p>Los docentes y escuelas que resulten ganadores en esta edición del Concurso Fundación Telefónica de Innovación Educativa, recibirán los regalos que se encuentran en la imagen adjunta (imágenes referenciales).</p>		
 						</div>
-							<p class="text-gray fs-15 pb-1">Asimismo, los primeros premios de cada categoría serán invitados al Congreso Iberoamericano de Ciencia, Tecnología, Innovación y Educación a celebrarse en Buenos Aires, Argentina, del 12 al 14 de noviembre de 2014. Además, para el resto de ganadores se realizarán actividades paralelas de premiación en su respectivo centro educativo.</p>
-							<p class="text-gray fs-15 pb-1">Cabe precisar que por cada ganador (primer, segundo y tercer lugar en cada categoría) se concederá un premio para el centro educativo, y uno para el docente (en el caso de que participe más de un profesor en el mismo trabajo, estos regalos se sortearán ante notario entre los miembros del equipo). Más información en las BASES del Concurso.</p>
+						<p>Asimismo, los primeros premios de cada categoría serán invitados al Congreso Iberoamericano de Ciencia, Tecnología, Innovación y Educación a celebrarse en Buenos Aires, Argentina, del 12 al 14 de noviembre de 2014. Además, para el resto de ganadores se realizarán actividades paralelas de premiación en su respectivo centro educativo.</p>
+						<p>Cabe precisar que por cada ganador (primer, segundo y tercer lugar en cada categoría) se concederá un premio para el centro educativo, y uno para el docente (en el caso de que participe más de un profesor en el mismo trabajo, estos regalos se sortearán ante notario entre los miembros del equipo). Más información en las BASES del Concurso.</p>
 					</div>
 				</div>	
 				<div class="row">
@@ -65,12 +65,12 @@
 						</div>						
 					</div>
 				</div>
-				<div class="row bg-2 pt-3 pl-2 pb-2 pr-2">
+				<div class="row recursos text-gray fs-15">
 					<div class="col-md-1">
 						<img src="assets/icons/importante.png">						
 					</div>
 					<div class="col-md-11 text-justify">
-						<p class="text-gray fs-15 pt-1"><em><strong>Cabe precisar que los docentes que ocupen el primer lugar en cada una de las categorías deberá de contar con ciertos requisitos, los mismos que están especificados en las BASES del Premio.</strong></em></p>	
+						<p><em><strong>Cabe precisar que los docentes que ocupen el primer lugar en cada una de las categorías deberá de contar con ciertos requisitos, los mismos que están especificados en las BASES del Premio.</strong></em></p>	
 					</div>
 				</div>			
 			</div>
