--- a/12Semana.html
+++ b/12Semana.html
@@ -1,7 +1,7 @@
 <!DOCTYPE>
 <html>
 	<head>
-		<title>Días Fundación Telefónica</title>
+		<title>Semana Fundación Telefónica</title>
 		<meta charset="utf-8">
 		<!-- Responsiveness -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
@@ -9,15 +9,15 @@
 		<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
-		<section id="calendariocivico">
-			<div class="row titulo-semana">
+		<section>
+			<div class="row titulo-semana text-gray fs-15">
 				<div class="col-md-7"></div>
 				<div class="col-md-5">
 					<div class="">
 						<h1 class="font-Museo text-azul">Semana Fundación Telefónica</h1>
 						<h3 class="text-celeste p-m-0">La competencia digital para la mejora de los aprendizajes</h3><br>	
-						<p class="text-gray fs-15 pt-3"><strong>TRUJILLO:</strong>&nbsp;Del 05 al 08 de mayo del 2015</p>
-						<p class="text-gray fs-15"><strong>AREQUIPA:</strong>&nbsp;Próximamente</p>	
+						<p class="pt-3"><strong>TRUJILLO:</strong>&nbsp;Del 05 al 08 de mayo del 2015</p>
+						<p><strong>AREQUIPA:</strong>&nbsp;Próximamente</p>	
 					</div>
 
 				</div>
@@ -28,20 +28,21 @@
 						<div class="row">
 							<div class="col-md-12 text-justify">
 								<h4 class="font-Museo text-azul pb-3">¿Qué es la Semana Fundación Telefónica?</h4>
-								<p class="text-gray fs-15 pb-1">La Semana Fundación Telefónica es una capacitación teórico-práctica que se realiza de manera descentralizada desde hace más de 6 años a lo largo del país. Busca ser un espacio de diálogo, reflexión y recopilación de saberes concretos que los docentes puedan luego aplicar en sus escuelas. Desde su creación, la SFT ha abordado temas como: Fortaleciendo la gestión de los directores de las instituciones educativas, (2012-2014); Experiencias exitosas en TIC y educación; Implementando el diseño curricular; Comprendiendo lo que leo y Aplicando el plan lector en el aula.</p>	
-								<div class="col-md-12 bg-1 recursos mb-3">
-									<p class="text-gray fs-15 pb-1"><strong>Este año</strong></p>
-									<ul type = disk class="pl-4">
-										<li class="text-gray fs-15 pb-3">Reflexionamos acerca de la importancia de la adquisición de la competencia digital, enmarcada en las competencias del siglo XXI, para la mejora de los aprendizajes en los alumnos.</li>
-										<li class="text-gray fs-15 pb-3">Analizamos la pertinencia y el impacto del uso de apps y recursos digitales en el aula y en los procesos de aprendizaje en general.</li>
-										<li class="text-gray fs-15">Presentamos herramientas y recursos digitales gratuitos que los docentes pueden adoptar fácilmente en el diseño de sus clases, haciendo énfasis en la importancia del proceso de curación y selección al que se enfrenta el docente cuando busca contenidos en la web.</li>
-									</ul>	
-								</div>
+								<p>La Semana Fundación Telefónica es una capacitación teórico-práctica que se realiza de manera descentralizada desde hace más de 6 años a lo largo del país. Busca ser un espacio de diálogo, reflexión y recopilación de saberes concretos que los docentes puedan luego aplicar en sus escuelas. Desde su creación, la SFT ha abordado temas como: Fortaleciendo la gestión de los directores de las instituciones educativas, (2012-2014); Experiencias exitosas en TIC y educación; Implementando el diseño curricular; Comprendiendo lo que leo y Aplicando el plan lector en el aula.</p>
+							</div>		
+							<div class="col-md-12 recursos mb-3">
+								<p><strong>Este año</strong></p>
+								<ul type = disk class="pl-4">
+									<li class="pb-3">Reflexionamos acerca de la importancia de la adquisición de la competencia digital, enmarcada en las competencias del siglo XXI, para la mejora de los aprendizajes en los alumnos.</li>
+									<li class="pb-3">Analizamos la pertinencia y el impacto del uso de apps y recursos digitales en el aula y en los procesos de aprendizaje en general.</li>
+									<li>Presentamos herramientas y recursos digitales gratuitos que los docentes pueden adoptar fácilmente en el diseño de sus clases, haciendo énfasis en la importancia del proceso de curación y selección al que se enfrenta el docente cuando busca contenidos en la web.</li>
+								</ul>	
+							</div>
 							</div>
 							<div class="col-md-12">
 								<div class="separador m-4-0"></div>	
 							</div>						
-							<div class="col-md-12 text-justify">
+							<div class="col-md-12 text-justify pb-3">
 								<h4 class="font-Museo text-azul pb-3">Nuestros Especialistas</h4>
 								<div class="col-md-12 text-justify">
 									<div class="col-md-2 p-m-0">
@@ -50,12 +51,12 @@
 										</div>	
 									</div>
 									<div class="col-md-10 pr-2 pt-3">
-										<p class="text-gray fs-15 pb-1"><strong>Hugo Díaz y César Picón</strong></p>	
-										<p class="text-gray fs-15 pb-1">Hugo es especialista en educación, asesor de la Fundación Telefónica y presidente del Consejo Nacional de Educación. César es especialista en gestión educativa y exviceministro de Educación.</p>	
+										<p><strong>Hugo Díaz y César Picón</strong></p>	
+										<p>Hugo es especialista en educación, asesor de la Fundación Telefónica y presidente del Consejo Nacional de Educación. César es especialista en gestión educativa y exviceministro de Educación.</p>	
 									</div>
 								</div>	
 							</div>							
-							<div class="col-md-12 text-justify pt-3">
+							<div class="col-md-12 text-justify pt-3 pb-3">
 								<div class="col-md-12 text-justify">
 									<div class="col-md-2 p-m-0">
 										<div class="relative">
@@ -63,65 +64,68 @@
 										</div>	
 									</div>
 									<div class="col-md-10 pr-2 pt-3">
-										<p class="text-gray fs-15 pb-1"><strong>Julio César Mateus |</strong><a href="">@juliussinmundo</a></p>	
-										<p class="text-gray fs-15 pb-1">Julio es especialista en TIC, educación y comunicación; asesor de la Fundación Telefónica.</p>	
+										<p><strong>Julio César Mateus |</strong><a href="">@juliussinmundo</a></p>	
+										<p>Julio es especialista en TIC, educación y comunicación; asesor de la Fundación Telefónica.</p>	
 									</div>
 								</div>	
 							</div>
-						</div>	
-						<div class="separador m-4-0"></div>
-						<h4 class="font-Museo text-azul pb-3">Galería de fotos</h4>						
-						<div class="row">
-							<div class="col-md-4 p-3">
-								<img src="assets/images/jurado1.png">
-								<p class="parrafo-galeria">Imagen</p>		
+							<div class="col-md-12">
+								<div class="separador m-4-0"></div>
+							</div>								
+							<div class="col-md-12 text-justify">
+								<h4 class="font-Museo text-azul pb-3">Galería de fotos</h4>						
+								<div class="row">
+									<div class="col-md-4 p-3">
+										<img src="assets/images/jurado1.png">
+										<p class="parrafo-galeria">Imagen</p>		
+									</div>
+									<div class="col-md-4 p-3">
+										<img src="assets/images/jurado2.png">
+										<p class="parrafo-galeria">Imagen</p>							
+									</div>
+									<div class="col-md-4 p-3">
+										<img src="assets/images/jurado3.png">
+										<p class="parrafo-galeria">Imagen</p>
+									</div>												
+								</div>
+								<div class="row">
+									<div class="col-md-4 p-3">
+										<img src="assets/images/jurado1.png">
+										<p class="parrafo-galeria">Imagen</p>		
+									</div>
+									<div class="col-md-4 p-3">
+										<img src="assets/images/jurado2.png">
+										<p class="parrafo-galeria">Imagen</p>							
+									</div>
+									<div class="col-md-4 p-3">
+										<img src="assets/images/jurado3.png">
+										<p class="parrafo-galeria">Imagen</p>
+									</div>												
+								</div>							
+								<div class="row">
+									<div class="col-md-4 p-3">
+										<img src="assets/images/jurado1.png">
+										<p class="parrafo-galeria">Imagen</p>		
+									</div>
+									<div class="col-md-4 p-3">
+										<img src="assets/images/jurado2.png">
+										<p class="parrafo-galeria">Imagen</p>							
+									</div>
+									<div class="col-md-4 p-3">
+										<img src="assets/images/jurado3.png">
+										<p class="parrafo-galeria">Imagen</p>
+									</div>												
+								</div>					
 							</div>
-							<div class="col-md-4 p-3">
-								<img src="assets/images/jurado2.png">
-								<p class="parrafo-galeria">Imagen</p>							
-							</div>
-							<div class="col-md-4 p-3">
-								<img src="assets/images/jurado3.png">
-								<p class="parrafo-galeria">Imagen</p>
-							</div>												
-						</div>
-						<div class="row">
-							<div class="col-md-4 p-3">
-								<img src="assets/images/jurado1.png">
-								<p class="parrafo-galeria">Imagen</p>		
-							</div>
-							<div class="col-md-4 p-3">
-								<img src="assets/images/jurado2.png">
-								<p class="parrafo-galeria">Imagen</p>							
-							</div>
-							<div class="col-md-4 p-3">
-								<img src="assets/images/jurado3.png">
-								<p class="parrafo-galeria">Imagen</p>
-							</div>												
-						</div>							
-						<div class="row">
-							<div class="col-md-4 p-3">
-								<img src="assets/images/jurado1.png">
-								<p class="parrafo-galeria">Imagen</p>		
-							</div>
-							<div class="col-md-4 p-3">
-								<img src="assets/images/jurado2.png">
-								<p class="parrafo-galeria">Imagen</p>							
-							</div>
-							<div class="col-md-4 p-3">
-								<img src="assets/images/jurado3.png">
-								<p class="parrafo-galeria">Imagen</p>
-							</div>												
-						</div>					
-					</div>		
+						</div>			
 					<div class="col-md-4 pl-2">
 						<div class="col-md-12">
-							<div class="col-md-12 bg-1 recursos mb-3">
+							<div class="col-md-12 recursos mb-3">
 								<h5 class="font-Museo text-azul pb-3">TACNA</h5>
-								<p class="text-gray fs-15"><strong>Fecha:</strong>&nbsp;Viernes 17 de octubre de 2014</p>
-								<p class="text-gray fs-15"><strong>Lugar:</strong>&nbsp;Salón Bolognesi del Gran Hotel Tacna</p>	
-								<p class="text-gray fs-15"><strong>Dirección:</strong>&nbsp;Avenida Bolognesi n° 300</p>	
-								<p class="text-gray fs-15"><strong>Horario:</strong>&nbsp;de 5:00 p.m. a 7:00 p.m.</p>		
+								<p><strong>Fecha:</strong>&nbsp;Viernes 17 de octubre de 2014</p>
+								<p><strong>Lugar:</strong>&nbsp;Salón Bolognesi del Gran Hotel Tacna</p>	
+								<p><strong>Dirección:</strong>&nbsp;Avenida Bolognesi n° 300</p>	
+								<p><strong>Horario:</strong>&nbsp;de 5:00 p.m. a 7:00 p.m.</p>		
 							</div>							
 						</div>						
 						<div class="col-md-12">
@@ -138,14 +142,14 @@
 							<iframe width="100%" height="150" src="https://www.youtube.com/embed/A8TCqKYGBPg" frameborder="0" allowfullscreen></iframe>		
 						</div>							
 						</div>
-						<div class="col-md-12">
-							<h4 class="font-Museo text-azul pt-3 pb-3">Artículos Relacionados</h4>							
+						<div class="col-md-12 m-4-0">
+							<h4 class="font-Museo text-azul">Artículos Relacionados</h4>							
 						</div>
-						<div class="col-md-12 bg-1 recursos text-justify">
-							<p class="text-gray fs-15"><a href="">Jóvenes, nivel educativo y empleo</a></p>
-							<p class="text-gray fs-15">En este artículo Hugo Díaz analiza el último informe de la Organización para la Cooperación y el Desarrollo Económicos (OCDE) sobre los niveles educativos y las calificaciones de la población, en especial de los jóvenes, para hacer frente al cambio de las estructuras del mercado de empleo. Una característica importante en épocas de crisis, como las que viven varios de los países miembros de esa organización, es el deseo de los jóvenes de calificarse antes de ingresar al mundo laboral.</p>	
-							<p class="text-gray fs-15"><a href="">Preparar para el futuro: habilidades que los profesores deben trasmitir a sus alumnos</a></p>
-							<p class="text-gray fs-15">¿Qué habilidades deben inculcar los profesores a los jóvenes alumnos de miras al siglo XXI? Son cuatro habilidades en particular que en este siguiente artículo nos da una mirada de los retos que plantea el futuro a los más jóvenes.</p>
+						<div class="col-md-12 recursos text-justify text-gray fs-13">
+							<p><a href="">Jóvenes, nivel educativo y empleo</a></p>
+							<p>En este artículo Hugo Díaz analiza el último informe de la Organización para la Cooperación y el Desarrollo Económicos (OCDE) sobre los niveles educativos y las calificaciones de la población, en especial de los jóvenes, para hacer frente al cambio de las estructuras del mercado de empleo. Una característica importante en épocas de crisis, como las que viven varios de los países miembros de esa organización, es el deseo de los jóvenes de calificarse antes de ingresar al mundo laboral.</p>	
+							<p><a href="">Preparar para el futuro: habilidades que los profesores deben trasmitir a sus alumnos</a></p>
+							<p>¿Qué habilidades deben inculcar los profesores a los jóvenes alumnos de miras al siglo XXI? Son cuatro habilidades en particular que en este siguiente artículo nos da una mirada de los retos que plantea el futuro a los más jóvenes.</p>
 						</div>		
 					</div>
 				</div>				
