--- a/13diasfundac.html
+++ b/13diasfundac.html
@@ -9,7 +9,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
-		<section id="calendariocivico">
+		<section>
 			<div class="row">
 				<div class="col-md-12 titulo-20claves">
 					<div class="col-md-6">
@@ -27,13 +27,13 @@
 						<p class="text-gray text-justify fs-15 pt-3">Se trata de una serie de talleres con el psicólogo<a href="">Roberto Lerner</a> que versarán acerca de la adquisición de habilidades sociales y su importancia para la vida. Este año visitaremos <strong>Tacna, Arequipa y Cajamarca</strong>.</p>				
 					</div>
 				</div>
-				<div class="row pt-3">
+				<div class="row pt-3 text-gray fs-15">
 					<div class="col-md-8 border-right pr-2">
 						<div class="row">
 							<div class="col-md-12 text-justify">
 								<h4 class="font-Museo text-azul pb-3">Objetivos</h4>
-								<p class="text-gray fs-15 pb-1">Detectar, retener y administrar habilidades se ha convertido en un asunto crucial en la economía de conocimiento actual. La escuela no puede ser más un espacio de transmisión de conocimientos consagrados. Lo importante es promover la habilidad de aprender, vale decir, de adaptarse a situaciones cambiantes, el potencial de adquirir nuevas capacidades.</p>	
-								<p class="text-gray fs-15 pb-1">Las aptitudes, entonces, son reflexivas: ¿Cómo pienso, cómo me desempeño, cómo entiendo al otro, cómo contribuyo a la comunidad, cómo ejerzo influencia? Son las preguntas que buscará dilucidar el taller, combinando datos científicos, casos concretos, ejercicios y reflexiones.</p>
+								<p>Detectar, retener y administrar habilidades se ha convertido en un asunto crucial en la economía de conocimiento actual. La escuela no puede ser más un espacio de transmisión de conocimientos consagrados. Lo importante es promover la habilidad de aprender, vale decir, de adaptarse a situaciones cambiantes, el potencial de adquirir nuevas capacidades.</p>	
+								<p>Las aptitudes, entonces, son reflexivas: ¿Cómo pienso, cómo me desempeño, cómo entiendo al otro, cómo contribuyo a la comunidad, cómo ejerzo influencia? Son las preguntas que buscará dilucidar el taller, combinando datos científicos, casos concretos, ejercicios y reflexiones.</p>
 							</div>
 						</div>	
 						<div class="row">
@@ -47,7 +47,7 @@
 									</div>	
 								</div>
 								<div class="col-md-9 pr-2">
-									<p class="text-gray fs-15 pb-1">Soy psicólogo y aunque me preparé para pasar la vida en algún instituto de investigación, terminé siendo una suerte de potpurrí de la psicología: profesor universitario con algunos trabajos académicos, maestro de escuela recalcitrante, psicoterapeuta de niños y adolescentes, especialista en el campo de la intervención en crisis, consultor en recursos humanos, columnista semanal en dos diarios de circulación nacional, conferencista.</p>	
+									<p>Soy psicólogo y aunque me preparé para pasar la vida en algún instituto de investigación, terminé siendo una suerte de potpurrí de la psicología: profesor universitario con algunos trabajos académicos, maestro de escuela recalcitrante, psicoterapeuta de niños y adolescentes, especialista en el campo de la intervención en crisis, consultor en recursos humanos, columnista semanal en dos diarios de circulación nacional, conferencista.</p>	
 								</div>
 							</div>			
 						</div>	
@@ -56,44 +56,44 @@
 						<p class="text-gray fs-15 pb-1">El reto de la crianza en estos tiempos.</p>
 						<iframe width="100%" height="300" src="https://www.youtube.com/embed/A8TCqKYGBPg" frameborder="0" allowfullscreen></iframe>							
 					</div>		
-					<div class="col-md-4 pl-2">
+					<div class="col-md-4 pl-2 text-gray fs-15">
 						<div class="col-md-12">
 							<h4 class="font-Museo text-azul pb-3">Ciudad</h4>
-							<div class="col-md-12 bg-1 recursos mb-3 p-3">
+							<div class="col-md-12 recursos mb-3">
 								<h5 class="font-Museo text-azul pb-3">CAJAMARCA</h5>
-								<p class="text-gray fs-15"><strong>Fecha:</strong>&nbsp;Viernes 14 de noviembre de 2014</p>
-								<p class="text-gray fs-15"><strong>Lugar:</strong>&nbsp;Hotel Costa del Sol.</p>	
-								<p class="text-gray fs-15"><strong>Dirección:</strong>&nbsp;Jirón Cruz de la Piedra 707. Cajamarca.</p>	
-								<p class="text-gray fs-15"><strong>Horario:</strong>&nbsp;de 5:00 p.m. a 7:00 p.m.</p>		
+								<p><strong>Fecha:</strong>&nbsp;Viernes 14 de noviembre de 2014</p>
+								<p><strong>Lugar:</strong>&nbsp;Hotel Costa del Sol.</p>	
+								<p><strong>Dirección:</strong>&nbsp;Jirón Cruz de la Piedra 707. Cajamarca.</p>	
+								<p><strong>Horario:</strong>&nbsp;de 5:00 p.m. a 7:00 p.m.</p>		
 							</div>							
 						</div>
 						<button type="button" class="btn btn-primary width-100 text-center m-4-0">INSCRÍBETE PARA CAJAMARCA</button>
 						<div class="col-md-12">
-							<div class="col-md-12 bg-1 recursos mb-3 p-3">
+							<div class="col-md-12 recursos mb-3">
 								<h5 class="font-Museo text-azul pb-3">AREQUIPA</h5>
-								<p class="text-gray fs-15"><strong>Fecha:</strong>&nbsp;Viernes 24 de octubre de 2014</p>
-								<p class="text-gray fs-15"><strong>Lugar:</strong>&nbsp;Hotel Casa Andina.</p>	
-								<p class="text-gray fs-15"><strong>Dirección:</strong>&nbsp;Calle Jerusalén 603. Arequipa.</p>	
-								<p class="text-gray fs-15"><strong>Horario:</strong>&nbsp;de 5:00 p.m. a 7:00 p.m.</p>		
+								<p><strong>Fecha:</strong>&nbsp;Viernes 24 de octubre de 2014</p>
+								<p><strong>Lugar:</strong>&nbsp;Hotel Casa Andina.</p>	
+								<p><strong>Dirección:</strong>&nbsp;Calle Jerusalén 603. Arequipa.</p>	
+								<p><strong>Horario:</strong>&nbsp;de 5:00 p.m. a 7:00 p.m.</p>		
 							</div>							
 						</div>
 						<div class="col-md-12">
-							<div class="col-md-12 bg-1 recursos mb-3 p-3">
+							<div class="col-md-12 recursos mb-3">
 								<h5 class="font-Museo text-azul pb-3">TACNA</h5>
-								<p class="text-gray fs-15"><strong>Fecha:</strong>&nbsp;Viernes 17 de octubre de 2014</p>
-								<p class="text-gray fs-15"><strong>Lugar:</strong>&nbsp;Salón Bolognesi del Gran Hotel Tacna</p>	
-								<p class="text-gray fs-15"><strong>Dirección:</strong>&nbsp;Avenida Bolognesi n° 300</p>	
-								<p class="text-gray fs-15"><strong>Horario:</strong>&nbsp;de 5:00 p.m. a 7:00 p.m.</p>		
+								<p><strong>Fecha:</strong>&nbsp;Viernes 17 de octubre de 2014</p>
+								<p><strong>Lugar:</strong>&nbsp;Salón Bolognesi del Gran Hotel Tacna</p>	
+								<p><strong>Dirección:</strong>&nbsp;Avenida Bolognesi n° 300</p>	
+								<p><strong>Horario:</strong>&nbsp;de 5:00 p.m. a 7:00 p.m.</p>		
 							</div>							
 						</div>
 						<div class="col-md-12">
 							<h4 class="font-Museo text-azul pt-3 pb-3">Artículos Relacionados</h4>							
 						</div>
-						<div class="col-md-12 bg-1 recursos text-justify p-3">
-							<p class="text-gray fs-15"><a href="">Jóvenes, nivel educativo y empleo</a></p>
-							<p class="text-gray fs-13">En este artículo Hugo Díaz analiza el último informe de la Organización para la Cooperación y el Desarrollo Económicos (OCDE) sobre los niveles educativos y las calificaciones de la población, en especial de los jóvenes, para hacer frente al cambio de las estructuras del mercado de empleo. Una característica importante en épocas de crisis, como las que viven varios de los países miembros de esa organización, es el deseo de los jóvenes de calificarse antes de ingresar al mundo laboral.</p>	
-							<p class="text-gray fs-15"><a href="">Preparar para el futuro: habilidades que los profesores deben trasmitir a sus alumnos</a></p>
-							<p class="text-gray fs-13">¿Qué habilidades deben inculcar los profesores a los jóvenes alumnos de miras al siglo XXI? Son cuatro habilidades en particular que en este siguiente artículo nos da una mirada de los retos que plantea el futuro a los más jóvenes.</p>
+						<div class="col-md-12 recursos text-justify">
+							<p><a href="">Jóvenes, nivel educativo y empleo</a></p>
+							<p class="fs-13">En este artículo Hugo Díaz analiza el último informe de la Organización para la Cooperación y el Desarrollo Económicos (OCDE) sobre los niveles educativos y las calificaciones de la población, en especial de los jóvenes, para hacer frente al cambio de las estructuras del mercado de empleo. Una característica importante en épocas de crisis, como las que viven varios de los países miembros de esa organización, es el deseo de los jóvenes de calificarse antes de ingresar al mundo laboral.</p>	
+							<p class="fs-15"><a href="">Preparar para el futuro: habilidades que los profesores deben trasmitir a sus alumnos</a></p>
+							<p class="fs-13">¿Qué habilidades deben inculcar los profesores a los jóvenes alumnos de miras al siglo XXI? Son cuatro habilidades en particular que en este siguiente artículo nos da una mirada de los retos que plantea el futuro a los más jóvenes.</p>
 						</div>		
 					</div>
 				</div>				
