--- a/1mayeutica.html
+++ b/1mayeutica.html
@@ -9,7 +9,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
-		<section id="calendariocivico">
+		<section>
 			<div class="row">
 				<div class="col-md-12">
 					<iframe width="100%" height="500" src="https://www.youtube.com/embed/A8TCqKYGBPg" frameborder="0" allowfullscreen></iframe>
@@ -17,20 +17,20 @@
 			</div>
 			<div class="contenedor">
 				<div class="row pt-3">		
-					<div class="col-md-8 text-justify border-right pr-2">
-						<p class="text-gray fs-15 pb-1">El pasado 12 de agosto se llevó a cabo el segundo diálogo de MayéuTic@: Personas y experiencias que transforman la educación, en el Espacio Fundación Telefónica</p><br>
-						<p class="text-gray fs-15 pb-1">En esa oportunidad, <strong>Valentín Muro</strong>, filósofo y hacker, nos habló acerca de cómo <strong>convertirnos en hackers en las escuelas.</strong> Compartimos el video de su ponencia y te invitamos a participa con tus comentarios: <strong>¿Cómo convertirnos en ´hackers´ educativos?</strong></p>
+					<div class="col-md-8 text-justify border-right pr-2 text-gray fs-15">
+						<p>El pasado 12 de agosto se llevó a cabo el segundo diálogo de MayéuTic@: Personas y experiencias que transforman la educación, en el Espacio Fundación Telefónica</p><br>
+						<p>En esa oportunidad, <strong>Valentín Muro</strong>, filósofo y hacker, nos habló acerca de cómo <strong>convertirnos en hackers en las escuelas.</strong> Compartimos el video de su ponencia y te invitamos a participa con tus comentarios: <strong>¿Cómo convertirnos en ´hackers´ educativos?</strong></p>
 					</div>
 					<div class="col-md-4 p-0-2">
 						<h5 class="text-celeste text-center">VIDEOS RELACIONADOS</h5>
 						<div class="video">
-							<iframe width="100%" height="150" src="https://www.youtube.com/embed/A8TCqKYGBPg" frameborder="0" allowfullscreen></iframe>					
+							<iframe width="100%" height="180" src="https://www.youtube.com/embed/A8TCqKYGBPg" frameborder="0" allowfullscreen></iframe>	
 						</div><br>	
 						<div class="video">
-							<iframe width="100%" height="150" src="https://www.youtube.com/embed/A8TCqKYGBPg" frameborder="0" allowfullscreen></iframe>					
+							<iframe width="100%" height="180" src="https://www.youtube.com/embed/A8TCqKYGBPg" frameborder="0" allowfullscreen></iframe>	
 						</div><br>	
 						<div class="video">
-							<iframe width="100%" height="150" src="https://www.youtube.com/embed/A8TCqKYGBPg" frameborder="0" allowfullscreen></iframe>						
+							<iframe width="100%" height="180" src="https://www.youtube.com/embed/A8TCqKYGBPg" frameborder="0" allowfullscreen></iframe>		
 						</div>
 					</div>
 				</div>				
