--- a/4ComparteBP.html
+++ b/4ComparteBP.html
@@ -9,20 +9,20 @@
 		<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
-		<section id="calendariocivico">
+		<section>
 			<div class="contenedor">
 				<div class="row">	
-					<div class="col-md-12 text-justify pl-2 pr-3">
+					<div class="col-md-12 text-justify pl-2 pr-3 text-gray fs-15">
 						<h1 class="font-Museo text-azul pb-3">Comparte tu Buena Práctica Educativa</h1>
-						<p class="text-gray fs-15 pb-1">A través de este formulario virtual podrás compartir con toda nuestra comunidad educativa tu buena práctica educativa, recuerda que éstas deberán contar con el uso de las nuevas tecnologías. Recuerda, además, que subiremos aquellas que cumplan con todas las características descritas en la página: ¿Qué es un buena práctica educativa?</p>
-						<p class="text-gray fs-15 pb-1">En este espacio nuestros usuarios no solo podrán votar por las mejores prácticas educativas, sino que además podrán interactuar con los docentes creadores de las mismas, descargar los documentos que sustenta la buena práctica y adaptarla a su contexto educativo, además de poder comentar acerca de los trabajos y tener la posibilidad de compartir sus propias prácticas.</p>	
-						<p class="text-gray fs-15 pb-1">Así mismo, ten en cuenta que dentro de poco este espacio recibirá las votaciones de nuestros usuarios y así poder ir determinando cuáles son las mejores prácticas educativas.</p>	
-						<p class="text-gray fs-15 pb-1">¡Bienvenidos a esta gran plataforma de intercambio!</p>	
-						<p class="text-gray fs-15 pb-1"><strong>(*) Campos obligatorios</strong></p>		
+						<p class="pb-1">A través de este formulario virtual podrás compartir con toda nuestra comunidad educativa tu buena práctica educativa, recuerda que éstas deberán contar con el uso de las nuevas tecnologías. Recuerda, además, que subiremos aquellas que cumplan con todas las características descritas en la página: ¿Qué es un buena práctica educativa?</p>
+						<p class="pb-1">En este espacio nuestros usuarios no solo podrán votar por las mejores prácticas educativas, sino que además podrán interactuar con los docentes creadores de las mismas, descargar los documentos que sustenta la buena práctica y adaptarla a su contexto educativo, además de poder comentar acerca de los trabajos y tener la posibilidad de compartir sus propias prácticas.</p>	
+						<p class="pb-1">Así mismo, ten en cuenta que dentro de poco este espacio recibirá las votaciones de nuestros usuarios y así poder ir determinando cuáles son las mejores prácticas educativas.</p>	
+						<p class="pb-1">¡Bienvenidos a esta gran plataforma de intercambio!</p>	
+						<p class="pb-1"><strong>(*) Campos obligatorios</strong></p>		
 						<h3 class="text-azulOscuro pt-3 pb-3">Datos generales</h3>
 						<div class="row">
 							<div class="col-md-5 text-right pl-10">
-								<p class="text-gray fs-15 pb-1">Nombres y apellidos del responsable(*) :</p>	
+								<p class="pb-1">Nombres y apellidos del responsable(*) :</p>	
 							</div>
 							<div class="col-md-7 pr-10">
 								<input type="text" name="nombresApellidos" class="width-100">
@@ -30,7 +30,7 @@
 						</div>
 						<div class="row">
 							<div class="col-md-5 text-right pl-10">
-								<p class="text-gray fs-15 pb-1">Cargo :</p>	
+								<p class="pb-1">Cargo :</p>	
 							</div>
 							<div class="col-md-7 pr-10">
 								<input type="text" name="cargo" class="width-100">
@@ -38,7 +38,7 @@
 						</div>
 						<div class="row">
 							<div class="col-md-5 text-right pl-10">
-								<p class="text-gray fs-15 pb-1">Área de enseñanza :</p>	
+								<p class="pb-1">Área de enseñanza :</p>	
 							</div>
 							<div class="col-md-7 pr-10">
 								<input type="text" name="areaenseñanza" class="width-100">
@@ -46,7 +46,7 @@
 						</div>
 						<div class="row">
 							<div class="col-md-5 text-right pl-10">
-								<p class="text-gray fs-15 pb-1">Correo electrónico(*) :</p>	
+								<p class="pb-1">Correo electrónico(*) :</p>	
 							</div>
 							<div class="col-md-7 pr-10">
 								<input type="text" name="correo" class="width-100">
@@ -54,7 +54,7 @@
 						</div>																		
 						<div class="row">
 							<div class="col-md-5 text-right pl-10">
-								<p class="text-gray fs-15 pb-1">Inicio de ejecución del proyecto :</p>	
+								<p class="pb-1">Inicio de ejecución del proyecto :</p>	
 							</div>
 							<div class="col-md-7 pr-10">
 								<input type="text" name="cargo" class="width-100">
@@ -62,7 +62,7 @@
 						</div>
 						<div class="row">
 							<div class="col-md-5 text-right pl-10">
-								<p class="text-gray fs-15 pb-1">Fin del proyecto :</p>	
+								<p class="pb-1">Fin del proyecto :</p>	
 							</div>
 							<div class="col-md-7 pr-10">
 								<input type="text" name="areaenseñanza" class="width-100">
@@ -70,7 +70,7 @@
 						</div>
 						<div class="row">
 							<div class="col-md-5 text-right pl-10">
-								<p class="text-gray fs-15 pb-1">Ciudad :</p>	
+								<p class="pb-1">Ciudad :</p>	
 							</div>
 							<div class="col-md-7 pr-10">
 								<input type="text" name="correo" class="width-100">
@@ -78,7 +78,7 @@
 						</div>
 						<div class="row">
 							<div class="col-md-5 text-right pl-10">
-								<p class="text-gray fs-15 pb-1">Temática :</p>	
+								<p class="pb-1">Temática :</p>	
 							</div>
 							<div class="col-md-7 pr-10">
 								<input type="text" name="cargo" class="width-100">
@@ -86,7 +86,7 @@
 						</div>
 						<div class="row">
 							<div class="col-md-5 text-right pl-10">
-								<p class="text-gray fs-15 pb-1">Colegio Responsable :</p>	
+								<p class="pb-1">Colegio Responsable :</p>	
 							</div>
 							<div class="col-md-7 pr-10">
 								<input type="text" name="areaenseñanza" class="width-100">
@@ -96,7 +96,7 @@
 						<h3 class="text-azulOscuro pb-3">Información sobre la Buena Práctica</h3>
 						<div class="row">
 							<div class="col-md-5 text-right pl-10">
-								<p class="text-gray fs-15 pb-1">Nombre del proyecto(*) :</p>	
+								<p class="pb-1">Nombre del proyecto(*) :</p>	
 							</div>
 							<div class="col-md-7 pr-10">
 								<input type="text" name="areaenseñanza" class="width-100">
@@ -104,7 +104,7 @@
 						</div>
 						<div class="row">
 							<div class="col-md-5 text-right pl-10">
-								<p class="text-gray fs-15 pb-1">Descripción de la buena práctica(*) :</p>	
+								<p class="pb-1">Descripción de la buena práctica(*) :</p>	
 							</div>
 							<div class="col-md-7 pr-10 pb-1">
 								<textarea rows="4" class="width-100 no-resize"></textarea>
@@ -112,7 +112,7 @@
 						</div>
 						<div class="row">
 							<div class="col-md-5 text-right pl-10">
-								<p class="text-gray fs-15 pb-1">Contexto en el que se desarrolla la buena práctica :</p>	
+								<p class="pb-1">Contexto en el que se desarrolla la buena práctica :</p>	
 							</div>
 							<div class="col-md-7 pr-10 pb-1">
 								<textarea rows="4" class="width-100 no-resize"></textarea>
@@ -120,7 +120,7 @@
 						</div>	
 						<div class="row">
 							<div class="col-md-5 text-right pl-10">
-								<p class="text-gray fs-15 pb-1">Objetivos generales y específicos :</p>	
+								<p class="pb-1">Objetivos generales y específicos :</p>	
 							</div>
 							<div class="col-md-7 pr-10 pb-1">
 								<textarea rows="4" class="width-100 no-resize"></textarea>
@@ -128,7 +128,7 @@
 						</div>	
 						<div class="row">
 							<div class="col-md-5 text-right pl-10">
-								<p class="text-gray fs-15 pb-1">Estrategias o metodología utilizadas :</p>	
+								<p class="pb-1">Estrategias o metodología utilizadas :</p>	
 							</div>
 							<div class="col-md-7 pr-10 pb-1">
 								<textarea rows="4" class="width-100 no-resize"></textarea>
@@ -136,7 +136,7 @@
 						</div>	
 						<div class="row">
 							<div class="col-md-5 text-right pl-10">
-								<p class="text-gray fs-15 pb-1">Resultados obtenidos :</p>	
+								<p class="pb-1">Resultados obtenidos :</p>	
 							</div>
 							<div class="col-md-7 pr-10 pb-1">
 								<textarea rows="4" class="width-100 no-resize"></textarea>
@@ -146,7 +146,7 @@
 						<h3 class="text-azulOscuro pb-3">Información complementaria</h3>
 						<div class="row">
 							<div class="col-md-5 text-right pl-10">
-								<p class="text-gray fs-15 pb-1">Web del proyecto (URL) :</p>	
+								<p class="pb-1">Web del proyecto (URL) :</p>	
 							</div>
 							<div class="col-md-7 pr-10">
 								<input type="text" name="cargo" class="width-100">
@@ -154,7 +154,7 @@
 						</div>
 						<div class="row">
 							<div class="col-md-5 text-right pl-10">
-								<p class="text-gray fs-15 pb-1">Enlace de Facebook:</p>	
+								<p class="pb-1">Enlace de Facebook:</p>	
 							</div>
 							<div class="col-md-7 pr-10">
 								<input type="text" name="areaenseñanza" class="width-100">
@@ -162,7 +162,7 @@
 						</div>
 						<div class="row">
 							<div class="col-md-5 text-right pl-10">
-								<p class="text-gray fs-15 pb-1">Enlace de Twitter :</p>	
+								<p class="pb-1">Enlace de Twitter :</p>	
 							</div>
 							<div class="col-md-7 pr-10">
 								<input type="text" name="correo" class="width-100">
@@ -170,7 +170,7 @@
 						</div>
 						<div class="row">
 							<div class="col-md-5 text-right pl-10">
-								<p class="text-gray fs-15 pb-1">Enlace de Youtube :</p>	
+								<p class="pb-1">Enlace de Youtube :</p>	
 							</div>
 							<div class="col-md-7 pr-10">
 								<input type="text" name="correo" class="width-100">
@@ -178,7 +178,7 @@
 						</div>	
 						<div class="row">
 							<div class="col-md-5 text-right pl-10">
-								<p class="text-gray fs-15 pb-1">Adjuntar documento :</p>	
+								<p class="pb-1">Adjuntar documento :</p>	
 							</div>
 							<div class="col-md-7 pr-10">
 								<div class="col-md-5 p-m-0"><button type="button" class="btn btn-info">Seleccionar archivo</button></div>
