--- a/6webrecomendadas.html
+++ b/6webrecomendadas.html
@@ -9,9 +9,9 @@
 		<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
-		<section id="websrecomendadas">
+		<section>
 			<div class="contenedor">
-				<div class="row bg-humo p-3-4">
+				<div class="row bg-1 p-3-4">
 					<h1 class="text-gray pl-1">Webs Recomendadas</h1><br>
 					<div class="row">		
 						<div class="col-md-12">
