--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
-		<section id="websrecomendadas">
+		<section>
 			<div class="row">
 				<div class="col-md-2 menu">
 					<img src="assets/images/conoceconcurso.png" onmouseout="this.style.opacity=1;this.filters.alpha.opacity='100';" onmouseover="this.style.opacity=0.7;this.filters.alpha.opacity='70';"/>
